<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nate.socialqs.AskQuestionActivity">

    <TextView android:text="@string/ask_question_welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ask_textView" />

    <LinearLayout android:id="@+id/question_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ask_textView"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/question_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_question_prompt"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/fld_question_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_question"
            android:layout_marginLeft="8dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/choice1_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/question_block"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/choice1_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_choice1_prompt"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/fld_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_choice1"
            android:layout_marginLeft="8dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/choice2_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice1_block"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/choice2_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_choice2_prompt"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/fld_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_choice2"
            android:layout_marginLeft="8dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_ask"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice2_block"
        android:text="@string/lbl_ask"
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ask_cancel"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ask"
        android:text="@string/lbl_cancel"
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold" />



</RelativeLayout>
